k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
      - name: order-service

        image: akspracticeacr26abin.azurecr.io/order-service:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
