k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
      - name: user-service

        image: akspracticeacr26abin.azurecr.io/user-service:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
