k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway

spec:
  ingressClassName: nginx

  rules:
  - host: fastapi-demo.local

    http:
      paths:

      - path: /users
        pathType: Prefix

        backend:
          service:
            name: user-service
            port:
              number: 80

      - path: /orders
        pathType: Prefix

        backend:
          service:
            name: order-service
            port:
              number: 80
